--- a/public/documentation/plugins/wizard.html
+++ b/public/documentation/plugins/wizard.html
@@ -534,7 +534,7 @@
           <p>Simply copy one of the code examples demonstrated below and include it in your page.</p>
           <div class="row mt-5">
             <div class="col-12 col-lg-10 m-auto">
-              <div class="card">
+              <div class="card border border-2">
                 <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
                   <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
                     <div class="multisteps-form__progress">
@@ -716,7 +716,7 @@
                 <div class="ct-docs-footer-copyright">
                   © <script>
                     document.write(new Date().getFullYear())
-                  </script><a href="https://creative-tim.com" class="ct-docs-footer-copyright-author" target="_blank">Creative Tim & UPDIVISION</a>
+                  </script> <a href="https://creative-tim.com" class="ct-docs-footer-copyright-author" target="_blank">Creative Tim & <a href="https://www.updivision.com" class="ct-docs-footer-copyright-author" target="_blank">UPDIVISION</a>
                 </div>
               </div>
               <div class="ct-docs-footer-col">
@@ -724,6 +724,9 @@
                   <li>
                     <a href="https://creative-tim.com" class="ct-docs-footer-nav-link" target="_blank">Creative Tim</a>
                   </li>
+                  <li class="nav-item">
+                    <a href="https://www.updivision.com" class="ct-docs-footer-nav-link" target="_blank">UPDIVISION</a>
+                </li>
                   <li>
                     <a href="https://www.creative-tim.com/contact-us" class="ct-docs-footer-nav-link" target="_blank">Contact Us</a>
                   </li>
