--- a/public/documentation/laravel/forgot-password.html
+++ b/public/documentation/laravel/forgot-password.html
@@ -598,33 +598,31 @@
             <div class="ct-docs-main-footer-col">
                 <footer class="ct-docs-footer">
                     <div class="ct-docs-footer-inner-row">
-                        <div class="ct-docs-footer-col">
-                            <div class="ct-docs-footer-copyright">
-                                © <script>
-                                    document.write(new Date().getFullYear())
-
-                                </script><a href="https://creative-tim.com" class="ct-docs-footer-copyright-author"
-                                    target="_blank">Creative Tim & UPDIVISION</a>
-                            </div>
+                      <div class="ct-docs-footer-col">
+                        <div class="ct-docs-footer-copyright">
+                          © <script>
+                            document.write(new Date().getFullYear())
+                          </script> <a href="https://creative-tim.com" class="ct-docs-footer-copyright-author" target="_blank">Creative Tim & <a href="https://www.updivision.com" class="ct-docs-footer-copyright-author" target="_blank">UPDIVISION</a>
                         </div>
-                        <div class="ct-docs-footer-col">
-                            <ul class="ct-docs-footer-nav-footer">
-                                <li>
-                                    <a href="https://creative-tim.com" class="ct-docs-footer-nav-link"
-                                        target="_blank">Creative Tim</a>
-                                </li>
-                                <li>
-                                    <a href="https://www.creative-tim.com/contact-us" class="ct-docs-footer-nav-link"
-                                        target="_blank">Contact Us</a>
-                                </li>
-                                <li>
-                                    <a href="https://creative-tim.com/blog" class="ct-docs-footer-nav-link"
-                                        target="_blank">Blog</a>
-                                </li>
-                            </ul>
-                        </div>
+                      </div>
+                      <div class="ct-docs-footer-col">
+                        <ul class="ct-docs-footer-nav-footer">
+                          <li>
+                            <a href="https://creative-tim.com" class="ct-docs-footer-nav-link" target="_blank">Creative Tim</a>
+                          </li>
+                          <li class="nav-item">
+                            <a href="https://www.updivision.com" class="ct-docs-footer-nav-link" target="_blank">UPDIVISION</a>
+                        </li>
+                          <li>
+                            <a href="https://www.creative-tim.com/contact-us" class="ct-docs-footer-nav-link" target="_blank">Contact Us</a>
+                          </li>
+                          <li>
+                            <a href="https://creative-tim.com/blog" class="ct-docs-footer-nav-link" target="_blank">Blog</a>
+                          </li>
+                        </ul>
+                      </div>
                     </div>
-                </footer>
+                  </footer>
             </div>
         </div>
     </div>
