--- a/public/documentation/plugins/photo-swipe.html
+++ b/public/documentation/plugins/photo-swipe.html
@@ -823,7 +823,7 @@ It's a separate element, as animating opacity is faster than rgba(). -->
                 <div class="ct-docs-footer-copyright">
                   © <script>
                     document.write(new Date().getFullYear())
-                  </script><a href="https://creative-tim.com" class="ct-docs-footer-copyright-author" target="_blank">Creative Tim & UPDIVISION</a>
+                  </script> <a href="https://creative-tim.com" class="ct-docs-footer-copyright-author" target="_blank">Creative Tim & <a href="https://www.updivision.com" class="ct-docs-footer-copyright-author" target="_blank">UPDIVISION</a>
                 </div>
               </div>
               <div class="ct-docs-footer-col">
@@ -831,6 +831,9 @@ It's a separate element, as animating opacity is faster than rgba(). -->
                   <li>
                     <a href="https://creative-tim.com" class="ct-docs-footer-nav-link" target="_blank">Creative Tim</a>
                   </li>
+                  <li class="nav-item">
+                    <a href="https://www.updivision.com" class="ct-docs-footer-nav-link" target="_blank">UPDIVISION</a>
+                </li>
                   <li>
                     <a href="https://www.creative-tim.com/contact-us" class="ct-docs-footer-nav-link" target="_blank">Contact Us</a>
                   </li>
