--- a/public/documentation/laravel/forgot-password.html
+++ b/public/documentation/laravel/forgot-password.html
@@ -538,13 +538,13 @@
                     resetting his password.</p>
                 <hr class="ct-docs-hr">
                 <p>In the case of an user forgetting the credentials there is the possibility of resetting them. For
-                    resetting the password the user should use the Forgot password? button from the login page. The user
+                    resetting the password the user should use the <b>Forgot password?</b> button from the login page. The user
                     must provide the email for the account and after that a link will be sent for resetting the password
                     to the provided mail address. </p>
                 <p>The <code>App/Http/Livewire/Auth/ForgotPassword.php</code> handles the recovery of the password.</p>
                 <div>
                     <pre>
-              <code>
+              <code class=" language-html" data-lang="html">
                 public function show(){
           
                   $this->validate();
@@ -570,7 +570,7 @@
                 <p>The <code>App/Http/Livewire/Auth/ResetPassword.php</code> helps the user reset the password.</p>
                 <div>
                     <pre>
-            <code>
+            <code class=" language-html" data-lang="html">
               public function update(){
         
                 $this->validate(); 
