--- a/public/documentation/laravel/login.html
+++ b/public/documentation/laravel/login.html
@@ -512,7 +512,7 @@
           <p>The <code>App/Http/Livewire/Auth/Login.php</code> handles the logging in of an existing user.</p>
           <div>
               <pre>
-              <code>
+              <code class=" language-html" data-lang="html">
                 public function store()
                 {
                     $attributes = $this->validate();
