--- a/public/documentation/laravel/sign-up.html
+++ b/public/documentation/laravel/sign-up.html
@@ -512,7 +512,7 @@
           <p>The <code>App/Http/Livewire/Auth/Register.php</code> handles the registration of a new user.</p>
           <div>
               <pre>
-              <code>
+              <code class=" language-html" data-lang="html">
                 public function store(){
 
                   $attributes = $this->validate();
