--- a/public/documentation/laravel/user-profile.html
+++ b/public/documentation/laravel/user-profile.html
@@ -512,7 +512,7 @@
           <p>The <code>App/Http/Livewire/ExampleLaravel/UserProfile.php</code>  handles the user's profile information.</p>
           <div>
               <pre>
-              <code>
+              <code class=" language-html" data-lang="html">
                 public function update()
                 {
                     $this->validate();
