--- a/public/documentation/laravel/forgot-password.html
+++ b/public/documentation/laravel/forgot-password.html
@@ -132,66 +132,57 @@
     <!-- End Google Tag Manager (noscript) -->
     <header class="ct-docs-navbar">
         <a class="ct-docs-navbar-brand" href="javascript:void(0)" aria-label="Bootstrap">
-        </a><a href="https://www.creative-tim.com/" class="ct-docs-navbar-text" target="_blank">
+          </a><a href="https://www.creative-tim.com/" class="ct-docs-navbar-text" target="_blank">
             Creative Tim
-        </a>
-        <div class="ct-docs-navbar-border"></div>
-        <a href="../../documentation/getting-started/installation.html" class="ct-docs-navbar-text">
+          </a>
+          <div class="ct-docs-navbar-border"></div>
+          <a href="../../documentation/getting-started/installation.html" class="ct-docs-navbar-text">
             Docs
-        </a>
-
+          </a>
+        
         <ul class="ct-docs-navbar-nav-left">
-            <li class="ct-docs-nav-item-dropdown">
-                <a href="javascript:;" class="ct-docs-navbar-nav-link" role="button">
-                    <span class="ct-docs-navbar-nav-link-inner--text">Live Preview</span>
-                </a>
-                <div class="ct-docs-navbar-dropdown-menu" aria-labelledby="DropdownPreview">
-                    <a class="ct-docs-navbar-dropdown-item" href="https://material-dashboard-laravel.creative-tim.com"
-                        target="_blank">
-                        Material Dashboard 2 Laravel
-                    </a>
-                    <a class="ct-docs-navbar-dropdown-item"
-                        href="https://material-dashboard-pro-laravel.creative-tim.com" target="_blank">
-                        Material Dashboard 2 Pro Laravel
-                    </a>
-                </div>
-            </li>
-            <li class="ct-docs-nav-item-dropdown">
-                <a href="javascript:;" class="ct-docs-navbar-nav-link" role="button">
-                    <span class="ct-docs-navbar-nav-link-inner--text">Support</span>
-                </a>
-                <div class="ct-docs-navbar-dropdown-menu" aria-labelledby="DropdownSupport">
-                    <a class="ct-docs-navbar-dropdown-item"
-                        href="https://github.com/creativetimofficial/material-dashboard-2-laravel/issues"
-                        target="_blank">
-                        Material Dashboard 2 Laravel
-                    </a>
-                    <a class="ct-docs-navbar-dropdown-item"
-                        href="https://github.com/creativetimofficial/ct-material-dashboard-2-pro-laravel/issues"
-                        target="_blank">
-                        Material Dashboard 2 Pro Laravel
-                    </a>
-                </div>
-            </li>
+          <li class="ct-docs-nav-item-dropdown">
+            <a href="javascript:;" class="ct-docs-navbar-nav-link" role="button">
+              <span class="ct-docs-navbar-nav-link-inner--text">Live Preview</span>
+            </a>
+            <div class="ct-docs-navbar-dropdown-menu" aria-labelledby="DropdownPreview">
+              <a class="ct-docs-navbar-dropdown-item" href="https://material-dashboard-laravel-livewire.creative-tim.com" target="_blank">
+                Material Dashboard 2 Laravel Livewire
+              </a>
+              <a class="ct-docs-navbar-dropdown-item" href="https://material-dashboard-pro-laravel-livewire.creative-tim.com" target="_blank">
+                Material Dashboard 2 Pro Laravel Livewire
+              </a>
+            </div>
+          </li>
+          <li class="ct-docs-nav-item-dropdown">
+            <a href="javascript:;" class="ct-docs-navbar-nav-link" role="button">
+              <span class="ct-docs-navbar-nav-link-inner--text">Support</span>
+            </a>
+            <div class="ct-docs-navbar-dropdown-menu" aria-labelledby="DropdownSupport">
+              <a class="ct-docs-navbar-dropdown-item" href="https://github.com/creativetimofficial/material-dashboard-laravel-livewire/issues" target="_blank">
+                Material Dashboard 2 Laravel Livewire
+              </a>
+              <a class="ct-docs-navbar-dropdown-item" href="https://github.com/creativetimofficial/ct-material-dashboard-pro-laravel-livewire/issues" target="_blank">
+                Material Dashboard 2 Pro Laravel Livewire
+              </a>
+            </div>
+          </li>
         </ul>
         <ul class="ct-docs-navbar-nav-right">
-            <li class="ct-docs-navbar-nav-item">
-                <a class="ct-docs-navbar-nav-link"
-                    href="https://www.creative-tim.com/product/material-dashboard-laravel" target="_blank">Download
-                    Free</a>
-            </li>
+          <li class="ct-docs-navbar-nav-item">
+            <a class="ct-docs-navbar-nav-link" href="https://www.creative-tim.com/product/material-dashboard-laravel-livewire" target="_blank">Download Free</a>
+          </li>
         </ul>
-        <a href="https://www.creative-tim.com/product/material-dashboard-pro-laravel" target="_blank"
-            class="ct-docs-btn-upgrade">
-            <span class="ct-docs-btn-inner--icon">
-                <i class="fas fa-download mr-2" aria-hidden="true"></i>
-            </span>
-            <span class="ct-docs-navbar-nav-link-inner--text">Upgrade to PRO</span>
+        <a href="https://www.creative-tim.com/product/material-dashboard-pro-laravel-livewire" target="_blank" class="ct-docs-btn-upgrade">
+          <span class="ct-docs-btn-inner--icon">
+            <i class="fas fa-download mr-2" aria-hidden="true"></i>
+          </span>
+          <span class="ct-docs-navbar-nav-link-inner--text">Upgrade to PRO</span>
         </a>
         <button class="ct-docs-navbar-toggler" type="button">
-            <span class="ct-docs-navbar-toggler-icon"></span>
+          <span class="ct-docs-navbar-toggler-icon"></span>
         </button>
-    </header>
+      </header>
     <div class="ct-docs-main-container">
         <div class="ct-docs-main-content-row">
             <div class="ct-docs-sidebar-col">
@@ -602,7 +593,7 @@
                         <div class="ct-docs-footer-copyright">
                           © <script>
                             document.write(new Date().getFullYear())
-                          </script> <a href="https://creative-tim.com" class="ct-docs-footer-copyright-author" target="_blank">Creative Tim & <a href="https://www.updivision.com" class="ct-docs-footer-copyright-author" target="_blank">UPDIVISION</a>
+                          </script> <a href="https://creative-tim.com" class="ct-docs-footer-copyright-author" target="_blank">Creative Tim</a> & <a href="https://www.updivision.com" class="ct-docs-footer-copyright-author" target="_blank">UPDIVISION</a>
                         </div>
                       </div>
                       <div class="ct-docs-footer-col">
