--- a/public/documentation/plugins/fullcalendar.html
+++ b/public/documentation/plugins/fullcalendar.html
@@ -134,11 +134,11 @@
             <span class="ct-docs-navbar-nav-link-inner--text">Live Preview</span>
           </a>
           <div class="ct-docs-navbar-dropdown-menu" aria-labelledby="DropdownPreview">
-            <a class="ct-docs-navbar-dropdown-item" href="https://material-dashboard-laravel.creative-tim.com" target="_blank">
-              Material Dashboard 2 Laravel
+            <a class="ct-docs-navbar-dropdown-item" href="https://material-dashboard-laravel-livewire.creative-tim.com" target="_blank">
+              Material Dashboard 2 Laravel Livewire
             </a>
-            <a class="ct-docs-navbar-dropdown-item" href="https://material-dashboard-pro-laravel.creative-tim.com" target="_blank">
-              Material Dashboard 2 Pro Laravel
+            <a class="ct-docs-navbar-dropdown-item" href="https://material-dashboard-pro-laravel-livewire.creative-tim.com" target="_blank">
+              Material Dashboard 2 Pro Laravel Livewire
             </a>
           </div>
         </li>
@@ -147,21 +147,21 @@
             <span class="ct-docs-navbar-nav-link-inner--text">Support</span>
           </a>
           <div class="ct-docs-navbar-dropdown-menu" aria-labelledby="DropdownSupport">
-            <a class="ct-docs-navbar-dropdown-item" href="https://github.com/creativetimofficial/material-dashboard-2-laravel/issues" target="_blank">
-              Material Dashboard 2 Laravel
+            <a class="ct-docs-navbar-dropdown-item" href="https://github.com/creativetimofficial/material-dashboard-laravel-livewire/issues" target="_blank">
+              Material Dashboard 2 Laravel Livewire
             </a>
-            <a class="ct-docs-navbar-dropdown-item" href="https://github.com/creativetimofficial/ct-material-dashboard-2-pro-laravel/issues" target="_blank">
-              Material Dashboard 2 Pro Laravel
+            <a class="ct-docs-navbar-dropdown-item" href="https://github.com/creativetimofficial/ct-material-dashboard-pro-laravel-livewire/issues" target="_blank">
+              Material Dashboard 2 Pro Laravel Livewire
             </a>
           </div>
         </li>
       </ul>
       <ul class="ct-docs-navbar-nav-right">
         <li class="ct-docs-navbar-nav-item">
-          <a class="ct-docs-navbar-nav-link" href="https://www.creative-tim.com/product/material-dashboard-laravel" target="_blank">Download Free</a>
+          <a class="ct-docs-navbar-nav-link" href="https://www.creative-tim.com/product/material-dashboard-laravel-livewire" target="_blank">Download Free</a>
         </li>
       </ul>
-      <a href="https://www.creative-tim.com/product/material-dashboard-pro-laravel" target="_blank" class="ct-docs-btn-upgrade">
+      <a href="https://www.creative-tim.com/product/material-dashboard-pro-laravel-livewire" target="_blank" class="ct-docs-btn-upgrade">
         <span class="ct-docs-btn-inner--icon">
           <i class="fas fa-download mr-2" aria-hidden="true"></i>
         </span>
@@ -664,7 +664,7 @@
                 <div class="ct-docs-footer-copyright">
                   © <script>
                     document.write(new Date().getFullYear())
-                  </script> <a href="https://creative-tim.com" class="ct-docs-footer-copyright-author" target="_blank">Creative Tim & <a href="https://www.updivision.com" class="ct-docs-footer-copyright-author" target="_blank">UPDIVISION</a>
+                  </script> <a href="https://creative-tim.com" class="ct-docs-footer-copyright-author" target="_blank">Creative Tim</a> & <a href="https://www.updivision.com" class="ct-docs-footer-copyright-author" target="_blank">UPDIVISION</a>
                 </div>
               </div>
               <div class="ct-docs-footer-col">
