--- a/public/documentation/getting-started/installation.html
+++ b/public/documentation/getting-started/installation.html
@@ -137,7 +137,7 @@
         <a href="../../documentation/getting-started/installation.html" class="ct-docs-navbar-text">
           Docs
         </a>
-      
+
       <ul class="ct-docs-navbar-nav-left">
         <li class="ct-docs-nav-item-dropdown">
           <a href="javascript:;" class="ct-docs-navbar-nav-link" role="button">
@@ -213,7 +213,7 @@
                         </li>
                         <li class="ct-docs-nav-sidenav-active">
                           <a href="../../documentation/getting-started/installation.html">
-                            installation
+                            Installation
                           </a>
                         </li>
                         <li class="">
@@ -578,7 +578,7 @@
                 </p>
                 <p>
                     And Laravel:
-                    <a href="https://laravel.com/docs/8.x/installation">https://laravel.com/docs/8.x/installation</a>
+                    <a href="https://laravel.com/docs/9.x/installation">https://laravel.com/docs/9.x/installation</a>
                 </p>
 
                 <h2 id="installation">Installation</h2>
