--- a/public/documentation/foundation/utilities.html
+++ b/public/documentation/foundation/utilities.html
@@ -28,13 +28,13 @@
     <meta property="og:description" content="Fullstack tool for building Laravel apps with hundreds of UI components and ready-made CRUDs." />
     <meta property="og:site_name" content="Creative Tim" />
     <link rel="stylesheet" href="../../assets/css/nucleo-icons.css" type="text/css">
- 
+
     <link rel="stylesheet" href="../../assets/css/nextjs-material-dashboard-pro.min.css" type="text/css">
 
     <link rel="stylesheet" href="../../assets/css/material-dashboard.min.css" type="text/css">
     <link rel="stylesheet" href="../../assets/css/demo.css" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    
+
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700" rel="stylesheet">
 
     <link href="../../assets/css/nucleo-icons.css" rel="stylesheet">
@@ -121,7 +121,7 @@
         <a href="../../documentation/getting-started/installation.html" class="ct-docs-navbar-text">
           Docs
         </a>
-      
+
       <ul class="ct-docs-navbar-nav-left">
         <li class="ct-docs-nav-item-dropdown">
           <a href="javascript:;" class="ct-docs-navbar-nav-link" role="button">
@@ -197,7 +197,7 @@
                 </li>
                 <li class="">
                   <a href="../../documentation/getting-started/installation.html">
-                    installation
+                    Installation
                   </a>
                 </li>
                 <li class="">
@@ -721,7 +721,7 @@
       }
     </script>
     <script src="../../assets/js/docs.js"></script>
-  
+
 
 </body>
 
